Did some code re-factoring

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <h1>Quoteapp by <a href="https://simel.me/" target="_blank">Simel</a></h1>
-    <div id="container">
+    <main id="container">
         <h1 id="quote-id"></h1>
         <div id="quote"></div>
         <hr class="line1">
         <button id="get-quote">GET QUOTE</button>
-    </div>
+    </main>
     <!-- <footer id="buy-coffee"> Buy me Coffee☕ </footer> -->
     <script src="index.js"></script>
 </body>
